--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,7 +10,8 @@
         "hashids/hashids": "^5.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-query-builder": "^5.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
