--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -48,9 +48,27 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    mysql_tests:
+        image: 'mysql:5.7'
+        ports:
+            - '${FORWARD_DB_PORT:-3307}:3306'
+        environment:
+            MYSQL_DATABASE: 'testing'
+            MYSQL_USER: 'root'
+            MYSQL_PASSWORD: ''
+            MYSQL_ROOT_PASSWORD: ''
+        volumes:
+            - 'sail-mysql_tests:/var/lib/mysql'
+        networks:
+            - sail
+        healthcheck:
+            test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+        container_name: "${COMPOSE_PROJECT_NAME}_mysql_tests"
 networks:
     sail:
         driver: bridge
 volumes:
     sail-mysql:
+        driver: local
+    sail-mysql_tests:
         driver: local
