--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.6",
     "lucide-react": "^0.338.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
